fixed spacing

--- a/src/custom.sass
+++ b/src/custom.sass
@@ -100,6 +100,9 @@ input
   font-weight: 600
   line-height: 36px
 
+.formCol
+  padding: 0
+
 body
   background-color: #D1D7DC
   font-family: $font-family-sans-serif
